--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
+    Copyright (c) 2021 Contributors to Eclipse Foundation.
     Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
@@ -23,7 +24,7 @@
    <parent>
        <groupId>org.glassfish.exousia</groupId>
        <artifactId>parent</artifactId>
-       <version>1.0.0-SNAPSHOT</version>
+       <version>2.1.0-SNAPSHOT</version>
     </parent>
 
    <artifactId>spi</artifactId>
