--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-    Copyright (c) 2021 Contributors to Eclipse Foundation.
+    Copyright (c) 2021, 2022 Contributors to Eclipse Foundation.
     Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved. This program and the accompanying materials 
     are made available under the terms of the Eclipse Public License v. 2.0, which is available at http://www.eclipse.org/legal/epl-2.0. 
     This Source Code may also be made available under the following Secondary Licenses when the conditions for such availability 
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>jakarta.authorization</groupId>
             <artifactId>jakarta.authorization-api</artifactId>
-            <version>2.1.0-RC1</version>
+            <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
-            <version>10.1.0-M8</version>
+            <version>10.1.0-M14</version>
             <scope>provided</scope>
         </dependency>
 
@@ -188,7 +188,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -197,6 +197,7 @@
                         </goals>
                         <configuration>
                             <source>1.8</source>
+                            <quiet>true</quiet>
                             <detectJavaApiLink>false</detectJavaApiLink>
                             <additionalJOption>-Xdoclint:none</additionalJOption>
                             <groups>
@@ -207,7 +208,7 @@
                             </groups>
                             <bottom><![CDATA[
 Comments to: <a href="mailto:wasp-dev@eclipse.org">exousia-dev@eclipse.org</a>.<br>
-Copyright &#169; 2021 Eclipse Foundation. All rights reserved.<br>
+Copyright &#169; 2021, 2022 Eclipse Foundation. All rights reserved.<br>
 Use is subject to <a href="http://www.eclipse.org/legal/epl-2.0" target="_top">license terms</a>.]]>
                             </bottom>
                             <links>
