--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -91,8 +91,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -113,7 +112,7 @@
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.28.0-GA</version>
+            <version>3.29.0-GA</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -174,15 +173,26 @@
                 </executions>
             </plugin>
             
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            
             
             <!-- Creates the OSGi MANIFEST.MF file -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>5.1.4</version>
+                <version>5.1.6</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <_noimportjava>true</_noimportjava>
+                        <_runee>JavaSE-11</_runee>
                         <Automatic-Module-Name>org.glassfish.exousia</Automatic-Module-Name>
                         <Extension-Name>org.glassfish.exousia</Extension-Name>
                         
