--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-    Copyright (c) 2021, 2022 Contributors to Eclipse Foundation.
-    Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved. This program and the accompanying materials 
-    are made available under the terms of the Eclipse Public License v. 2.0, which is available at http://www.eclipse.org/legal/epl-2.0. 
-    This Source Code may also be made available under the following Secondary Licenses when the conditions for such availability 
-    set forth in the Eclipse Public License v. 2.0 are satisfied: GNU General Public License, version 2 with the GNU Classpath 
-    Exception, which is available at https://www.gnu.org/software/classpath/license.html. SPDX-License-Identifier: EPL-2.0 OR 
-    GPL-2.0 WITH Classpath-exception-2.0 -->
+<!--
+
+    Copyright (c) 2021, 2023 Contributors to Eclipse Foundation.
+    Copyright (c) 2010, 2019 Oracle and/or its affiliates. All rights reserved.
+
+    This program and the accompanying materials are made available under the
+    terms of the Eclipse Public License v. 2.0, which is available at
+    http://www.eclipse.org/legal/epl-2.0.
+
+    This Source Code may also be made available under the following Secondary
+    Licenses when the conditions for such availability set forth in the
+    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
+    version 2 with the GNU Classpath Exception, which is available at
+    https://www.gnu.org/software/classpath/license.html.
+
+    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +24,7 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.8</version>
         <relativePath />
     </parent>
 
@@ -109,7 +119,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
-            <version>10.1.0-M16</version>
+            <version>10.1.13</version>
             <scope>provided</scope>
         </dependency>
 
@@ -148,9 +158,7 @@
         <plugins>
             <!-- Sets minimal Maven version to 3.6.0 -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -171,9 +179,7 @@
 
             <!-- Configure the jar with the sources. -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -186,9 +192,7 @@
 
             <!-- Create Javadoc for API jar -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -196,7 +200,6 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <source>8</source>
                             <quiet>true</quiet>
                             <detectJavaApiLink>false</detectJavaApiLink>
                             <additionalJOption>-Xdoclint:none</additionalJOption>
@@ -207,8 +210,8 @@
                                 </group>
                             </groups>
                             <bottom><![CDATA[
-Comments to: <a href="mailto:wasp-dev@eclipse.org">exousia-dev@eclipse.org</a>.<br>
-Copyright &#169; 2021, 2022 Eclipse Foundation. All rights reserved.<br>
+Comments to: <a href="mailto:exousia-dev@eclipse.org">exousia-dev@eclipse.org</a>.<br>
+Copyright &#169; 2021, 2023 Eclipse Foundation. All rights reserved.<br>
 Use is subject to <a href="http://www.eclipse.org/legal/epl-2.0" target="_top">license terms</a>.]]>
                             </bottom>
                         </configuration>
