--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>org.glassfish.exousia</groupId>
     <artifactId>exousia</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <name>Exousia</name>
     <description>
@@ -91,7 +91,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -105,7 +105,7 @@
         <dependency>
             <groupId>jakarta.authorization</groupId>
             <artifactId>jakarta.authorization-api</artifactId>
-            <version>2.1.0</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -182,8 +182,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>17</release>
                 </configuration>
             </plugin>
             
@@ -192,22 +191,22 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>5.1.6</version>
+                <version>5.1.9</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <_noimportjava>true</_noimportjava>
-                        <_runee>JavaSE-11</_runee>
+                        <_runee>JavaSE-21</_runee>
                         <Automatic-Module-Name>org.glassfish.exousia</Automatic-Module-Name>
                         <Extension-Name>org.glassfish.exousia</Extension-Name>
                         
                         <Bundle-SymbolicName>org.glassfish.exousia</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Bundle-Name>Exousia Jakarta Authorization Implementation ${project.version}</Bundle-Name>
-                        <Bundle-Description>Eclipse Jakarta Authorization Implementation (jakarta.authorization/2.1) ${project.version}</Bundle-Description>  
+                        <Bundle-Description>Eclipse Jakarta Authorization Implementation (jakarta.authorization/3.0) ${project.version}</Bundle-Description>  
                         
                         <Specification-Title>Jakarta Authorization</Specification-Title>
-                        <Specification-Version>2.1</Specification-Version>
+                        <Specification-Version>3.0</Specification-Version>
                         <Specification-Vendor>Eclipse Foundation</Specification-Vendor>
                         
                         <Implementation-Title>Exousia</Implementation-Title> 
