--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -219,9 +219,13 @@
                             !org.apache.tomee.catalina,!org.apache.tomee.catalina,!weblogic.security.jacc.simpleprovider,
                             !weblogic.security.jacc,!org.glassfish.deployment.common,!org.glassfish.internal.api,
                             !org.jboss.as.security.service,!org.apache.geronimo.security.jacc.mappingprovider,!org.jboss.security,
+                            !org.apache.catalina.realm,
                             javassist.util.proxy;version="[3.1,5)";resolution:=optional,
                             *
                         </Import-Package>
+                        <DynamicImport-Package>
+                            *
+                        </DynamicImport-Package>
                     </instructions>
                 </configuration>
                 <executions>
