--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9</version>
         <relativePath />
     </parent>
 
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>jakarta.authorization</groupId>
             <artifactId>jakarta.authorization-api</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.0-M2</version>
             <scope>provided</scope>
         </dependency>
 
