--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -19,7 +19,7 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
@@ -29,7 +29,7 @@
 
     <groupId>org.glassfish.exousia</groupId>
     <artifactId>exousia</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
 
     <name>Exousia</name>
     <description>
@@ -37,7 +37,7 @@
     </description>
     <url>https://projects.eclipse.org/projects/ee4j.exousia</url>
     <inceptionYear>2019</inceptionYear>
- 
+
     <licenses>
         <license>
             <name>EPL 2.0</name>
@@ -66,7 +66,7 @@
            <url>https://github.com/eclipse-ee4j/exousia/graphs/contributors</url>
        </contributor>
     </contributors>
-    
+
     <mailingLists>
         <mailingList>
             <name>Jakarta Authorization dev mailing list</name>
@@ -116,10 +116,10 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-      
-        
+
+
         <!-- Tests -->
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -127,7 +127,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <pluginRepositories>
         <pluginRepository>
             <id>dash-licenses-snapshots</id>
@@ -156,7 +156,7 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
-    
+
         <plugins>
             <!-- Sets minimal Maven version to 3.6.0 -->
             <plugin>
@@ -177,7 +177,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
@@ -186,8 +186,8 @@
                     <target>11</target>
                 </configuration>
             </plugin>
-            
-            
+
+
             <!-- Creates the OSGi MANIFEST.MF file -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -200,21 +200,21 @@
                         <_runee>JavaSE-11</_runee>
                         <Automatic-Module-Name>org.glassfish.exousia</Automatic-Module-Name>
                         <Extension-Name>org.glassfish.exousia</Extension-Name>
-                        
+
                         <Bundle-SymbolicName>org.glassfish.exousia</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Bundle-Name>Exousia Jakarta Authorization Implementation ${project.version}</Bundle-Name>
-                        <Bundle-Description>Eclipse Jakarta Authorization Implementation (jakarta.authorization/2.1) ${project.version}</Bundle-Description>  
-                        
+                        <Bundle-Description>Eclipse Jakarta Authorization Implementation (jakarta.authorization/2.1) ${project.version}</Bundle-Description>
+
                         <Specification-Title>Jakarta Authorization</Specification-Title>
                         <Specification-Version>2.1</Specification-Version>
                         <Specification-Vendor>Eclipse Foundation</Specification-Vendor>
-                        
-                        <Implementation-Title>Exousia</Implementation-Title> 
+
+                        <Implementation-Title>Exousia</Implementation-Title>
                         <Implementation-Version>${project.version}</Implementation-Version>
-                        <Implementation-Vendor>Eclipse</Implementation-Vendor> 
+                        <Implementation-Vendor>Eclipse</Implementation-Vendor>
                         <Implementation-Vendor-Id>org.glassfish</Implementation-Vendor-Id>
-                        
+
                         <Export-Package>
                             org.glassfish.exousia.*
                         </Export-Package>
@@ -237,7 +237,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!-- Adds the manifest file created by the org.apache.felix:maven-bundle-plugin -->
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -249,7 +249,7 @@
                     </archive>
                 </configuration>
             </plugin>
-           
+
 
             <!-- Configure the jar with the sources. -->
             <plugin>
@@ -263,7 +263,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!-- Create Javadoc for API jar -->
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -292,7 +292,7 @@ Use is subject to <a href="http://www.eclipse.org/legal/epl-2.0" target="_top">l
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!-- Check licenses of dependencies -->
             <plugin>
                 <groupId>org.eclipse.dash</groupId>
@@ -307,7 +307,7 @@ Use is subject to <a href="http://www.eclipse.org/legal/epl-2.0" target="_top">l
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!-- Generate a "consumer pom" for the generated jar -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
