--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -30,11 +30,11 @@
 
     <groupId>org.glassfish.exousia</groupId>
     <artifactId>exousia.spi.tomcat</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
 
     <name>Exousia Tomcat Integration</name>
     <description>
-    	Code to integrate Exousia into Tomcat
+      Code to integrate Exousia into Tomcat
     </description>
     <url>https://projects.eclipse.org/projects/ee4j.exousia</url>
     <inceptionYear>2019</inceptionYear>
