--- a/spi/tomcat/pom.xml
+++ b/spi/tomcat/pom.xml
@@ -22,15 +22,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.eclipse.ee4j</groupId>
-        <artifactId>project</artifactId>
-        <version>1.0.9</version>
-        <relativePath />
+       <groupId>org.glassfish.exousia</groupId>
+       <artifactId>spi</artifactId>
+       <version>3.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.glassfish.exousia</groupId>
     <artifactId>exousia.spi.tomcat</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
 
     <name>Exousia Tomcat Integration</name>
     <description>
@@ -119,7 +116,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
-            <version>11.0.11</version>
+            <version>11.0.14</version>
             <scope>provided</scope>
         </dependency>
 
